refactor(LottoNumberGenerator): unmodifiableList를 반환하지 않고, copyOf를 통해 복사된 값을 반환하도록 수정.