@@ -1,9 +1,10 @@
 package lotto.domain;
 
-import static camp.nextstep.edu.missionutils.Randoms.*;
-import static lotto.domain.Lotto.*;
+import static camp.nextstep.edu.missionutils.Randoms.pickUniqueNumbersInRange;
+import static lotto.domain.Lotto.MAX_NUMBER_OF_LOTTO;
+import static lotto.domain.Lotto.MIN_NUMBER_OF_LOTTO;
+import static lotto.domain.Lotto.SIZE_OF_LOTTO_NUMBERS;
 
-import java.util.Collections;
 import java.util.List;
 
 public class LottoNumberGenerator {
@@ -12,6 +13,6 @@ public class LottoNumberGenerator {
         List<Integer> randomNumbers = pickUniqueNumbersInRange(MIN_NUMBER_OF_LOTTO,
                 MAX_NUMBER_OF_LOTTO, SIZE_OF_LOTTO_NUMBERS);
 
-        return Collections.unmodifiableList(randomNumbers);
+        return List.copyOf(randomNumbers);
     }
 }
